--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		 <div class="filter"></div>
 		 <section class="intro">
 		  <h3>Neutral Beauty<hr></h3>
-		  <p>What is Neautral Beauty?</p>
+		  <p>What is Neutral Beauty?</p>
           <p>Neutral Beauty is a website whose main goal is to educate people on women’s beauty standards. We strive to do this in an unbiased way, that way the reader can come to a decision on how they feel about beauty standards, the beauty industry, and anything else we cover. Regardless of what you read, remember that you are beautiful because you are you!</p>
 			  
 		  <!--────social media links─────-->
